# jsavrs

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  QWEN.md  README.md  complex_ssa_test.vn  complexity_analysis.md  complexity_analysis_full.md  dhat-heap.json  document_file.md  error_code_analysis.md  float_test.vn  input.vn  large_toy_program.vn  memory_layout_promt.md  performace.md  performance_file_alysis.md  profile.bat  prompt_improver.md  rustfmt.toml  simple_test.vn  sonar-project.properties  ssa_test.vn  tasks.md  temp_test.vn  x86_64_instruction.csv
.claude/: claude-status.ps1  settings.json  statusline.sh
.claude/commands/: speckit.checklist.md  speckit.clarify.md  speckit.constitution.md  speckit.implement.md  speckit.plan.md  speckit.tasks.md
.github/: codecov.yml  copilot-commit-message-instructions.md  dependabot.yml
.github/agents/: speckit.analyze.agent.md  speckit.checklist.agent.md  speckit.clarify.agent.md  speckit.constitution.agent.md  speckit.implement.agent.md  speckit.plan.agent.md  speckit.specify.agent.md  speckit.tasks.agent.md  speckit.taskstoissues.agent.md
.github/prompts/: speckit.analyze.prompt.md  speckit.checklist.prompt.md  speckit.clarify.prompt.md  speckit.implement.prompt.md  speckit.plan.prompt.md  speckit.specify.prompt.md  speckit.tasks.prompt.md
.github/workflows/: coverage.yml  rust.yml  sonarQube.yml
.qwen/: settings.json  settings.json.orig
.qwen/commands/: speckit.analyze.md  speckit.analyze.toml  speckit.checklist.md  speckit.checklist.toml  speckit.clarify.md  speckit.clarify.toml  speckit.constitution.md  speckit.implement.md  speckit.implement.toml  speckit.plan.md  speckit.plan.toml  speckit.specify.md  speckit.specify.toml  speckit.tasks.md  speckit.tasks.toml  speckit.taskstoissues.md  speckit.taskstoissues.toml
.specify/memory/: constitution.md
.specify/templates/: agent-file-template.md  plan-template.md  spec-template.md  tasks-template.md
benches/: assembly_generation_bench.rs  jsavrs_benchmark.rs
examples/: asm_generator.rs
specs/001-1-add-floating/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-aggiungi-test-per/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-design-and-implement/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-develop-a-comprehensive/: data-model.md  plan.md  quickstart.md  (+3 more)
src/: cli.rs  lexer.rs  lexer_old.rs  lib.rs  main.rs
tests/: asm_abi_comprehensive_tests.rs  asm_abi_tests.rs  asm_data_directive_tests.rs  asm_element_section_tests.rs  asm_file_tests.rs  asm_generator.rs  asm_immediate_tests.rs  asm_instruction_display_edge_cases_tests.rs  asm_instruction_tests.rs  asm_instruction_unreachable_coverage_tests.rs  asm_memory_operand_tests.rs  asm_operand_tests.rs  asm_platform_tests.rs  asm_register_tests.rs  asm_section_tests.rs  asm_x86_register_extended_tests.rs  asm_x86_register_tests.rs  assembly_elements_test.rs  ast_snapshot_tests.rs  ast_tests.rs  auto_target_config.rs  cli_tests.rs  compile_error_snapshot_tests.rs  compile_error_tests.rs  error_code_tests.rs  error_reporter_snapshot_tests.rs  error_reporter_tests.rs  factorial_function_test.rs  function_generation_test.rs  hello_world_generation_test.rs  instructions_test.rs  ir_access_control_tests.rs  ir_basic_block_snapshot_tests.rs  ir_basic_block_tests.rs  ir_data_layout_tests.rs  ir_dce_escape_tests.rs  ir_dce_integration_tests.rs  ir_dce_liveness_tests.rs  ir_dce_reachability_tests.rs  ir_dce_snapshot_tests.rs  (+78 more)
vn_files/: sccp_test.vn  simpletet.vn
vscode/: settings.json
(+1058 files in other folders)
