[package]
name = "jsavrs"
version = "0.1.0"
edition = "2024"
authors = ["Giuseppe Bianconi(Giuseppe-Bianc) <bianconig6@gmail.com>"]
description = "A transpiler written in Rust that uses Logos for lexing."
license = "Apache-2.0"
repository = "https://github.com/Giuseppe-Bianc/jsavrs"
readme = "README.md"
keywords = ["rust", "logos", "lexer"]
categories = ["compilers", "parsing"]

[lib]
name = "jsavrs"
path = "src/lib.rs"

[[bin]]
name = "jsavrs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.45", features = ["cargo", "derive"] }
console = "0.16.0"
logos = "0.15.1"
thiserror = "2.0.14"
regex = "1.11.1"
uuid = { version = "1.18.0" , features = ["v4"] }


[dev-dependencies]
assert_cmd = "2.0.17"
insta = { version = "1.43.1", features = ["yaml", "redactions", "filters"] }
predicates = "3.1.3"
lazy_static = "1.5.0"
#tempfile = "3.8.0"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
