[package]
name = "jsavrs"
version = "0.1.0"
edition = "2024"
authors = ["Giuseppe Bianconi(Giuseppe-Bianc) <bianconig6@gmail.com>"]
description = "A transpiler written in Rust that uses Logos for lexing."
license = "Apache-2.0"
repository = "https://github.com/Giuseppe-Bianc/jsavrs"
readme = "README.md"
keywords = ["rust", "logos", "lexer"]
categories = ["compilers", "parsing"]

[lib]
name = "jsavrs"
path = "src/lib.rs"

[[bin]]
name = "jsavrs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.49", features = ["cargo", "derive"] }
console = "0.16.1"
logos = "0.15.1"
thiserror = "2.0.17"
regex = "1.12.1"
lazy_static = "1.5.0"
uuid = { version = "1.18.1", features = ["v4"] }
petgraph = "0.8.3"


[dev-dependencies]
assert_cmd = "2.0.17"
insta = { version = "1.43.2", features = ["yaml", "redactions", "filters"] }
predicates = "3.1.3"
criterion = "0.7.0"
#tempfile = "3.8.0"


[[bench]]
name = "jsavrs_benchmark"
harness = false

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

#[profile.release]
#debug = 1
