[package]
name = "jsavrs"
version = "0.1.0"
edition = "2024"
authors = ["Giuseppe Bianconi (Giuseppe-Bianc) <bianconig6@gmail.com>"]
description = """
A high-performance transpiler and compiler toolchain written in Rust.
Features a lexer powered by Logos, SSA-based intermediate representation,
dead code elimination (DCE), and SCCP optimization passes.
"""
license = "Apache-2.0"
repository = "https://github.com/Giuseppe-Bianc/jsavrs"
readme = "README.md"
keywords = ["rust", "logos", "lexer"]
categories = ["compilers", "parsing"]

[lib]
name = "jsavrs"
path = "src/lib.rs"
bench = false  # Non includere i test della lib nei benchmark
doctest = false # Disabilita i doctest per la libreria


[[bin]]
name = "jsavrs"
path = "src/main.rs"
bench = false  # Non includere i test del bin nei benchmark

[dependencies]
clap = { version = "4.5.60", features = ["cargo", "derive"] }
console = "0.16.2"
logos = "0.16.1"
thiserror = "2.0.18"
regex = "1.12.3"
#lazy_static = "1.5.0"
#once_cell = "1.20.2"
uuid = { version = "1.21.0", features = ["v4"] }
petgraph = "0.8.3"
dhat = "0.3.3"
chrono = "0.4.43"

[dev-dependencies]
assert_cmd = "2.1.2"
insta = { version = "1.46.3", features = ["yaml", "redactions", "filters"] }
predicates = "3.1.4"
criterion = "0.8.2"
#tempfile = "3.8.0"

[features]
dhat-heaps = []

[[bench]]
name = "jsavrs_benchmark"
harness = false

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.release]
debug = 1
panic = "abort"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
# Performance
inefficient_to_string = "warn"
